--- a/rider-examples/quarkus-dbunit-sample/src/test/resources/datasets/books.yml
+++ b/rider-examples/quarkus-dbunit-sample/src/test/resources/datasets/books.yml
@@ -1,25 +1,25 @@
-BOOK:
-  - ID: 2001
-    AUTHOR: "Douglas Adams"
-    GENRE: "sci-fi"
-    ISBN: "2-207-30340-3"
-    TITLE: "H2G2"
-    YEAR: 1979
-  - ID: 2002
-    AUTHOR: "Frank Herbert"
-    GENRE: "sci-fi"
-    ISBN: "9780240807720"
-    TITLE: "Dune"
-    YEAR: 1965
-  - ID: 3003
-    AUTHOR: "George Orwell"
-    GENRE: "sci-fi"
-    ISBN: "0061810886"
-    TITLE: "Nineteen Eighty-Four"
-    YEAR: 1949
-  - ID: 4004
-    AUTHOR: "J. R. R. Tolkien"
-    GENRE: "fantasy"
-    ISBN: "0048231398"
-    TITLE: "The Silmarillion"
-    YEAR: 1977
+book:
+  - id: 2001
+    author: "Douglas Adams"
+    genre: "sci-fi"
+    isbn: "2-207-30340-3"
+    title: "H2G2"
+    year: 1979
+  - id: 2002
+    author: "Frank Herbert"
+    genre: "sci-fi"
+    isbn: "9780240807720"
+    title: "Dune"
+    year: 1965
+  - id: 3003
+    author: "George Orwell"
+    genre: "sci-fi"
+    isbn: "0061810886"
+    title: "Nineteen Eighty-Four"
+    year: 1949
+  - id: 4004
+    author: "J. R. R. Tolkien"
+    genre: "fantasy"
+    isbn: "0048231398"
+    title: "The Silmarillion"
+    year: 1977
