--- a/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 # GLOBAL
+
+# Property required because this project its a module in maven
+quarkus.class-loading.parent-first-artifacts=com.github.database-rider:rider-core
+
 isbn.prefix=1234
 quarkus.http.auth.form.landing-page=http://localhost:8080
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/cdbookstoreDB
-quarkus.datasource.jdbc.driver = org.postgresql.Driver
-quarkus.datasource.jdbc.username = cdbookstoreDB
-# unencrypted password is fine for the showcase but don't do it in a real application!
-quarkus.datasource.jdbc.password = h2g2
-quarkus.datasource.jdbc.max-size=5
-quarkus.datasource.jdbc.min-size=5
-quarkus.datasource.jdbc.initial-size=5
-
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=false
@@ -25,13 +20,7 @@ quarkus.log.category."com.github".level=WARN
 
 %dev.isbn.suffix=DEV
 
-
 # TEST
-%test.quarkus.datasource.jdbc.url = jdbc:h2:mem:cdbookstoreDB
-%test.quarkus.datasource.jdbc.driver = org.h2.Driver
-%test.quarkus.datasource.jdbc.max-size=5
-%test.quarkus.datasource.jdbc.min-size=5
-%test.quarkus.datasource.jdbc.initial-size=5
 
 #TODO in issue #329 %test.quarkus.datasource.jdbc."secondary".url = jdbc:h2:mem:cdbookstoreSecondaryDB
 #TODO in issue #329 %test.quarkus.datasource.jdbc."secondary".driver = org.h2.Driver
