- Fixes H2 (v2) warning when cleaning DB (#375) - Adds Kotlin example using H2 v2 (#461)

--- a/rider-examples/pom.xml
+++ b/rider-examples/pom.xml
@@ -19,6 +19,7 @@
         <module>quarkus-dbunit-sample</module>
         <module>quarkus-postgres-sample</module>
         <module>rider-micronaut</module>
+        <module>rider-kotlin</module>
     </modules>
 
     <name>Database Rider examples</name>
