--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,14 @@
         <ds.version>1.9.5</ds.version>
         <surefire.version>3.0.0-M5</surefire.version>
         <testcontainers.version>1.15.3</testcontainers.version>
+        <jackson.version>2.13.3</jackson.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.2</version>
             <scope>provided</scope>
         </dependency>
         <!-- test -->
@@ -91,7 +92,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.35</version>
+            <version>1.7.36</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -107,7 +108,12 @@
             <dependency>
                 <groupId>org.dbunit</groupId>
                 <artifactId>dbunit</artifactId>
-                <version>2.7.0</version>
+                <version>2.7.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>5.2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -116,9 +122,9 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.codehaus.jackson</groupId>
-                <artifactId>jackson-mapper-lgpl</artifactId>
-                <version>1.9.13</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.yaml</groupId>
