--- a/rider-examples/spring-boot-dbunit-sample/pom.xml
+++ b/rider-examples/spring-boot-dbunit-sample/pom.xml
@@ -50,6 +50,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
