--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-examples</artifactId>
-    <version>1.32.4-SNAPSHOT</version>
+    <version>1.33.0</version>
   </parent>
 
   <artifactId>rider-quarkus-sample</artifactId>
