--- a/rider-examples/rider-micronaut/pom.xml
+++ b/rider-examples/rider-micronaut/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.32.4-SNAPSHOT</version>
+        <version>1.33.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
