--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-examples</artifactId>
-    <version>1.33.0</version>
+    <version>1.33.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>rider-quarkus-sample</artifactId>
@@ -126,6 +126,28 @@
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <source>8</source>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
         </configuration>
       </plugin>
     </plugins>
