--- a/rider-examples/rider-kotlin/pom.xml
+++ b/rider-examples/rider-kotlin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.33.0</version>
+        <version>1.33.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rider-kotlin-example</artifactId>
@@ -175,7 +175,13 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
