--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
         if: "contains(github.ref, 'master')"
       - name: Configure Git user
         run: |
-          git config --globa user.email "${{ secrets.GIT_EMAIL }}"
-          git config --globa user.name "rmpestano"
+          git config --global user.email "${{ secrets.GIT_EMAIL }}"
+          git config --global user.name "rmpestano"
       - name: Docs snapshot
         run: cd rider-core && mvn -q cukedoctor:execute scm-publish:publish-scm -Pdocs -DGH_TOKEN=${{ secrets.GH_TOKEN }}
         if: "contains(github.ref, 'master') && !contains(github.event.head_commit.message, 'prepare release')"
