--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
     <!-- tag::version[] -->
-    <version>1.34.1-SNAPSHOT</version>
+    <version>1.35.0</version>
     <!-- end::version[] -->
 
     <modules>
@@ -51,7 +51,7 @@
         <connection>scm:git:https://github.com/database-rider/database-rider.git</connection>
         <developerConnection>scm:git:git@github.com:database-rider/database-rider.git</developerConnection>
         <url>https://github.com/database-rider/database-rider.git</url>
-        <tag>1.33.0</tag>
+        <tag>1.35.0</tag>
     </scm>
 
     <ciManagement>
