--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.github.database-rider</groupId>
     <artifactId>rider-examples</artifactId>
-    <version>1.35.0</version>
+    <version>1.35.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>rider-quarkus-sample</artifactId>
