support xlsx dataset

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.poi</groupId>
-                <artifactId>poi</artifactId>
+                <artifactId>poi-ooxml</artifactId>
                 <version>5.2.2</version>
             </dependency>
             <dependency>
