--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <surefire.version>3.0.0-M7</surefire.version>
         <testcontainers.version>1.17.3</testcontainers.version>
         <jackson.version>2.13.3</jackson.version>
+        <tuprolog.version>0.20.2</tuprolog.version>
     </properties>
 
     <dependencies>
@@ -130,6 +131,17 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>1.16</version>
+            </dependency>
+            <dependency>
+                <groupId>it.unibo.tuprolog</groupId>
+                <artifactId>solve-classic-jvm</artifactId>
+                <version>${tuprolog.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>it.unibo.tuprolog</groupId>
+                <artifactId>parser-theory-jvm</artifactId>
+                <version>${tuprolog.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
