--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <version>8</version>
         <relativePath />
     </parent>
 
@@ -66,6 +66,7 @@
         <surefire.version>3.0.0-M7</surefire.version>
         <testcontainers.version>1.17.3</testcontainers.version>
         <jackson.version>2.13.3</jackson.version>
+        <tuprolog.version>0.20.2</tuprolog.version>
         <slf4j.version>1.7.36</slf4j.version>
     </properties>
 
@@ -141,6 +142,17 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>1.16</version>
             </dependency>
+            <dependency>
+                <groupId>it.unibo.tuprolog</groupId>
+                <artifactId>solve-classic-jvm</artifactId>
+                <version>${tuprolog.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>it.unibo.tuprolog</groupId>
+                <artifactId>parser-theory-jvm</artifactId>
+                <version>${tuprolog.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -151,8 +163,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
