--- a/rider-cdi/pom.xml
+++ b/rider-cdi/pom.xml
@@ -4,7 +4,7 @@
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
    <!-- tag::version[] -->
-   <version>1.35.2-SNAPSHOT</version>
+   <version>1.36.0</version>
    <!-- end::version[] -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
