--- a/rider-examples/rider-kotlin/pom.xml
+++ b/rider-examples/rider-kotlin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.36.0</version>
+        <version>1.36.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rider-kotlin-example</artifactId>
