--- a/rider-core/pom.xml
+++ b/rider-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-parent</artifactId>
-        <version>1.36.1-SNAPSHOT</version>
+        <version>1.37.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
