quarkus 3 initial commit

--- a/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
@@ -7,9 +7,9 @@ isbn.prefix=1234
 quarkus.http.auth.form.landing-page=http://localhost:8080
 
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.sql=true
 
-quarkus.log.category."com.github".level=WARN
+quarkus.log.category."com.github".level=INFO
 
 
 # DEV
@@ -33,5 +33,5 @@ quarkus.log.category."com.github".level=WARN
 #TODO in issue #329 %test.quarkus.hibernate-orm."secondary".log.sql=true
 
 %test.quarkus.log.category."com.github".level=DEBUG
-
+#%test.quarkus.datasource.db-kind=postgresql
 %test.isbn.suffix=TEST
