--- a/rider-cdi/pom.xml
+++ b/rider-cdi/pom.xml
@@ -120,6 +120,12 @@
             </properties>
             <dependencies>
                 <dependency>
+                    <groupId>com.github.database-rider</groupId>
+                    <artifactId>rider-core</artifactId>
+                    <version>${project.parent.version}</version>
+                    <classifier>jakarta</classifier>
+                </dependency>
+                <dependency>
                     <groupId>jakarta.enterprise</groupId>
                     <artifactId>jakarta.enterprise.cdi-api</artifactId>
                     <version>4.0.1</version>
