--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -112,6 +112,20 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>jakarta</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.github.database-rider</groupId>
+                    <artifactId>rider-core</artifactId>
+                    <version>${project.parent.version}</version>
+                    <classifier>jakarta</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
